@@ -38,6 +38,10 @@ tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
 }
 
+bootRun {
+    jvmArgs(['--enable-preview'])
+}
+
 test {
     jvmArgs(['--enable-preview'])
 }
